[package]
name = "mkl-corrode"
version = "0.1.0"
authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
edition = "2018"

[features]
ilp64 = [ "mkl-sys/ilp64" ]
openmp = [ "mkl-sys/openmp" ]

[dependencies.mkl-sys]
git = "https://github.com/Andlon/mkl-sys"
rev = "dc7eaaaccd0804d39b9d04958024b20d43a10827"
features = [ "dss", "inspector-executor" ]

[dev-dependencies]
approx = "0.3"
